refactor: change class name "firstService" into "service first" also in similar class

--- a/index.html
+++ b/index.html
@@ -54,17 +54,27 @@
     <!-- Exercise 2 - Services / Features -->
 
     <div class="secondContainer">
-      <div class="firstService">
+      <div class="service first">
         <h4>First Service</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, asperiores.</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus,
+          asperiores.
+        </p>
       </div>
-      <div class="secondService">
+      <div class="service second">
         <h4>Second Service</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt adipisci suscipit eligendi. Distinctio, qui cum!</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt
+          adipisci suscipit eligendi. Distinctio, qui cum!
+        </p>
       </div>
-      <div class="thirdService">
+      <div class="service third">
         <h4>Third Service</h4>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea ipsum voluptate deserunt tempora, quam mollitia reprehenderit adipisci nobis.</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea ipsum
+          voluptate deserunt tempora, quam mollitia reprehenderit adipisci
+          nobis.
+        </p>
       </div>
     </div>
   </body>
