feat: add card image exercise

--- a/index.html
+++ b/index.html
@@ -77,5 +77,68 @@
         </p>
       </div>
     </div>
+
+    <!-- End of exercise 2-->
+
+    <!-- Exercise 3 -->
+    <div class="thirdContainer">
+      <div class="thumbnail">
+        <img src="img/random.jpg" alt="" />
+      </div>
+      <div class="thumbnail">
+        <img src="img/random.jpg" alt="" />
+      </div>
+      <div class="thumbnail">
+        <img src="img/random.jpg" alt="" />
+      </div>
+      <div class="thumbnail">
+        <img src="img/random.jpg" alt="" />
+      </div>
+      <div class="thumbnail">
+        <img src="img/random.jpg" alt="" />
+      </div>
+      <div class="thumbnail">
+        <img src="img/random.jpg" alt="" />
+      </div>
+      <div class="thumbnail">
+        <img src="img/random.jpg" alt="" />
+      </div>
+    </div>
+
+    <!-- End of exercise 3 -->
+
+    <!-- Exercise 4 -->
+    <div class="fourthContainer">
+      <div class="card">
+        <div class="header"></div>
+        <div class="content">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+            perspiciatis.
+          </p>
+          <button>Buy Now</button>
+        </div>
+      </div>
+      <div class="card big">
+        <div class="header"></div>
+        <div class="content">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+            perspiciatis.
+          </p>
+          <button>Buy Now</button>
+        </div>
+      </div>
+      <div class="card">
+        <div class="header"></div>
+        <div class="content">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+            perspiciatis.
+          </p>
+          <button>Buy Now</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
